erDiagram
Assembly {
    string assembly_id  
    string assembly_name  
    Count assembly_n_contigs  
    Link assembly_link  
}
Bin {
    string bin_id  
    string bin_name  
    stringList bin_contigs  
}
Community {
    string community_id  
    string community_name  
    CommunityTypeEnum community_community_type  
    string community_description  
}
Condition {
    string condition_id  
    string condition_name  
}
DubSeqLibrary {
    string dubseq_library_id  
    string dubseq_library_name  
    Count dubseq_library_n_fragments  
}
Gene {
    string gene_id  
    string gene_gene_id  
    stringList gene_aliases  
    integer gene_contig_number  
    StrandEnum gene_strand  
    integer gene_start  
    integer gene_stop  
    string gene_function  
}
Genome {
    string genome_id  
    string genome_name  
    Count genome_n_contigs  
    Count genome_n_features  
    Link genome_link  
}
Image {
    string image_id  
    string image_name  
    string image_description  
    string image_MIME_type  
    Size image_size  
    string image_dimensions  
    Link image_link  
}
Location {
    string location_id  
    string location_name  
    Latitude location_latitude  
    Longitude location_longitude  
    string location_continent  
    string location_country  
    string location_region  
    string location_biome  
    string location_feature  
}
OTU {
    string otu_id  
    string otu_name  
}
Process {
    string process_id  
    string process_process  
    string process_person  
    string process_campaign  
    Date process_date_start  
    Date process_date_end  
    stringList process_input_objects  
    stringList process_output_objects  
}
Protocol {
    string protocol_id  
    string protocol_name  
    string protocol_description  
    Link protocol_link  
}
Reads {
    string reads_id  
    string reads_name  
    Count reads_read_count  
    ReadTypeEnum reads_read_type  
    SequencingTechnologyEnum reads_sequencing_technology  
    Link reads_link  
}
Sample {
    string sample_id  
    string sample_name  
    Depth sample_depth  
    Elevation sample_elevation  
    Date sample_date  
    Time sample_time  
    Time sample_timezone  
    string sample_material  
    string sample_env_package  
    string sample_description  
}
Strain {
    string strain_id  
    string strain_name  
    string strain_description  
}
Taxon {
    string taxon_id  
    string taxon_name  
    string taxon_ncbi_taxid  
}
TnSeqLibrary {
    string tnseq_library_id  
    string tnseq_library_name  
    string tnseq_library_primers_model  
    integer tnseq_library_n_mapped_reads  
    integer tnseq_library_n_barcodes  
    integer tnseq_library_n_usable_barcodes  
    integer tnseq_library_n_insertion_locations  
    Rate tnseq_library_hit_rate_essential  
    Rate tnseq_library_hit_rate_other  
}
Assembly ||--|o Strain : "assembly_strain"
Bin ||--|| Assembly : "bin_assembly"
Community ||--|o Community : "community_parent_community"
Community ||--|o Condition : "community_condition"
Community ||--|o Sample : "community_sample"
Community ||--|o Strain : "community_defined_strains"
DubSeqLibrary ||--|| Genome : "dubseq_library_genome"
Gene ||--|| Genome : "gene_genome"
Genome ||--|o Strain : "genome_strain"
Process ||--|o Protocol : "process_protocol"
Sample ||--|| Location : "sample_location"
Strain ||--|o Genome : "strain_genome"
Strain ||--|o Strain : "strain_derived_from"
Strain ||--}o Gene : "strain_genes_changed"
TnSeqLibrary ||--|| Genome : "tnseq_library_genome"